--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,35 @@ NUXT_PUBLIC_BINANCE_API_SECRET=
 # CryptoCompare API Key (required if using cryptocompare provider)
 # Register at: https://min-api.cryptocompare.com/
 NUXT_PUBLIC_CRYPTOCOMPARE_API_KEY=
+
+# ==============================================
+# PROXY CONFIGURATION (untuk bypass ISP blocking)
+# ==============================================
+
+# Enable/disable proxy
+USE_PROXY=false
+
+# OPSI 1: Public HTTP/HTTPS Proxy (Gratis tapi tidak stabil)
+# Cari di: https://free-proxy-list.net/ atau https://www.proxy-list.download/
+# Format: protocol://host:port
+# HTTPS_PROXY=http://103.123.45.67:8080
+# HTTP_PROXY=http://103.123.45.67:8080
+
+# OPSI 2: SOCKS Proxy (seperti dari SSH tunnel atau Shadowsocks)
+# HTTPS_PROXY=socks5://127.0.0.1:1080
+
+# OPSI 3: Premium Proxy Service (Recommended untuk production)
+# Contoh providers:
+# - Bright Data: https://brightdata.com
+# - Smartproxy: https://smartproxy.com
+# - Oxylabs: https://oxylabs.io
+# HTTPS_PROXY=http://customer-username:password@proxy.provider.com:8080
+# PROXY_USER=your_username
+# PROXY_PASS=your_password
+
+# OPSI 4: Custom proxy atau VPN
+# BINANCE_PROXY=http://your-proxy-server.com:8080
+
+# Custom Binance API endpoint (optional)
+# Default: https://api.binance.com
+# BINANCE_API_ENDPOINT=https://api.binance.com
