--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "scripts": {
     "build": "nuxt build",
     "start": "nuxt start",
-    "dev": "nuxt dev"
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "apexcharts": "^5.3.5",
     "file-saver": "^2.0.5",
+    "https-proxy-agent": "^7.0.6",
     "nuxt": "^4.1.2",
     "pinia": "^3.0.3",
+    "undici": "^7.16.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0"
