--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,1 @@
-﻿{
-  "buildCommand": "npm run generate",
-  "outputDirectory": "dist",
-  "installCommand": "npm install"
-}
+﻿{"buildCommand":"npm run generate","outputDirectory":"dist","installCommand":"npm install"}
